Sigil 0.7.3 TBA
    - Fix issue 2193: Incorrect country code used for Serbia.

Sigil 0.7.2 2013.04.14
    - Implement issue 2129: Enhance archive filename encoding handling.
    - Implement issue 2128: Warnings for non-ASCII characters in filenames.
    - Implement issue 2113: Preview should zoom separately from other views.
    - Implement issue 1997: Tool to Add Cover image and file automatically.
    - Implement issue 1993: Find & Replace should have a Marked Text option.
    - Implement issue 2083: Enhance invalid OPF recovery.
    - Implement issue 2082: Improve performance of Book Browser refresh.
    - Fix issue 2170: Spellcheck should remember position after changing word.
    - Fix issue 2148: Don't delete cover image in "Delete unused media files".
    - Fix issue 2147: Doubleclick in Delete Files dialog can cause crash.
    - Fix issue 2143: Bulk rename with just a number for filename does not use correct number of 0s.
    - Fix issue 2121: Wait cursor shows when dialog is open while saving or opening.
    - Fix issue 2107: Heading not accepted due to split at end of file.
    - Fix issue 2110: Insert Special Character inserts wrong code for nnbsp.
    - Fix issue 2021: Importing UTF-16 encoded files results in empty file.
    - Fix issue 2088: Ctrl-click on text files does not work in Code View.
    - Fix Issue 2071: Anchor dialog has disabled text field.
    - Fix Issue 2077: Rename dialog incorrectly sized.
    - Fix issue 2081: Book Browser tooltips are not updated when semantics change or for cover images.
    - Fix issue 2080: OPF meta title not updated correctly for Add Semantic.
    - Fix issue 2079: UI Language dropdown does not show language names for entries containing _.

Sigil 0.7.1 2013.03.03
    - Implement issue 2058: Code View should be able to show resizable image.
    - Implement issue 2038: Spellcheck "change selected word to" should remember sorting order.
    - Implement issue 2043: Spellcheck should allow case-insensitive sorting.