@@ -1,5 +1,6 @@
 Sigil 0.7.3 TBA
     - Fix issue 2193: Incorrect country code used for Serbia.
+    - Implement issue 2199: Mac, Don't open empty book by default.
 
 Sigil 0.7.2 2013.04.14
     - Implement issue 2129: Enhance archive filename encoding handling.
